--- a/ci/build.yml
+++ b/ci/build.yml
@@ -40,6 +40,18 @@ build core unix frozen:
     untracked: true
     expire_in: 1 day
 
+build core unix frozen debug:
+  stage: build
+  script:
+    - cd core
+    # TODO: maybe this deserves make target after all?
+    - sed -i "s/^PYOPT = '1'$/PYOPT = '0'/" SConscript.unix
+    - pipenv run make build_unix_frozen
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    untracked: true
+    expire_in: 1 day
+
 
 # Crypto
 
@@ -93,6 +105,3 @@ build legacy emu:
     name: "$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     untracked: true
     expire_in: 1 day
-
-
-
