--- a/ci/environment.yml
+++ b/ci/environment.yml
@@ -1,7 +1,7 @@
 environment:
   stage: environment
   image: docker
-  when: manual
+  # when: manual
   variables:
     GIT_SUBMODULE_STRATEGY: none  # no need to fetch submodules
     CONTAINER_NAME: "$CI_REGISTRY/satoshilabs/trezor/trezor-firmware/environment"
